--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
@@ -176,7 +176,6 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="LSc-CU-Ipp" secondAttribute="trailing" constant="63" id="Dle-Pk-6AY"/>
                                             <constraint firstAttribute="width" constant="125" id="F30-2u-ahN"/>
                                             <constraint firstItem="OHo-yC-iXl" firstAttribute="top" secondItem="moH-ve-np3" secondAttribute="top" id="FN8-co-nJU"/>
                                             <constraint firstItem="LSc-CU-Ipp" firstAttribute="top" secondItem="moH-ve-np3" secondAttribute="top" id="Hlq-8K-p3p"/>
@@ -184,13 +183,13 @@
                                             <constraint firstItem="LSc-CU-Ipp" firstAttribute="leading" secondItem="moH-ve-np3" secondAttribute="leading" id="cAU-Cf-RlX"/>
                                             <constraint firstAttribute="bottom" secondItem="OHo-yC-iXl" secondAttribute="bottom" constant="4" id="ct4-sK-M8Z"/>
                                             <constraint firstAttribute="bottom" secondItem="LSc-CU-Ipp" secondAttribute="bottom" constant="4" id="hu5-Er-juf"/>
-                                            <constraint firstItem="OHo-yC-iXl" firstAttribute="leading" secondItem="LSc-CU-Ipp" secondAttribute="trailing" constant="6" id="kDa-21-PoX"/>
                                             <constraint firstAttribute="height" constant="24" id="yCz-DN-ENE"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bachelor, Student " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLy-u7-xbI" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="209" y="48" width="120" height="21"/>
+                                        <rect key="frame" x="213" y="48" width="116" height="21"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="116" id="F7L-34-Hte"/>
                                             <constraint firstAttribute="height" constant="21" id="vuj-kr-rQx"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -220,20 +219,30 @@
                                             <action selector="starBtnPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bls-Iq-B7B"/>
                                         </connections>
                                     </button>
+                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="note_icon" translatesAutoresizingMaskIntoConstraints="NO" id="1UF-pt-WAu">
+                                        <rect key="frame" x="198" y="52" width="13.333333333333343" height="14"/>
+                                        <color key="tintColor" name="warning"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="14" id="9Vk-7s-mYl"/>
+                                            <constraint firstAttribute="width" constant="13.333333333333329" id="e3d-h2-Ex2"/>
+                                        </constraints>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="bold"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" name="Base White"/>
                                 <constraints>
                                     <constraint firstItem="moH-ve-np3" firstAttribute="top" secondItem="0eO-wQ-6fx" secondAttribute="bottom" constant="7" id="01h-m7-veE"/>
                                     <constraint firstItem="Vca-51-Ogp" firstAttribute="leading" secondItem="0eO-wQ-6fx" secondAttribute="trailing" constant="-2" id="4N1-df-Nna"/>
                                     <constraint firstAttribute="bottom" secondItem="djt-58-Hxo" secondAttribute="bottom" constant="21" id="7mE-o9-quf"/>
-                                    <constraint firstItem="djt-58-Hxo" firstAttribute="leading" secondItem="moH-ve-np3" secondAttribute="trailing" constant="88" id="ApU-Oh-8dX"/>
                                     <constraint firstItem="F7S-op-5qg" firstAttribute="leading" secondItem="1RT-vZ-JaN" secondAttribute="leadingMargin" id="DTO-HT-6vv"/>
                                     <constraint firstAttribute="trailing" secondItem="gLy-u7-xbI" secondAttribute="trailing" constant="8" id="Gmd-E9-4KR"/>
                                     <constraint firstItem="gLy-u7-xbI" firstAttribute="top" secondItem="0eO-wQ-6fx" secondAttribute="bottom" constant="8" symbolic="YES" id="IRI-vY-fkc"/>
                                     <constraint firstItem="ejV-6Z-Jem" firstAttribute="leading" secondItem="F7S-op-5qg" secondAttribute="trailing" constant="8" symbolic="YES" id="LgF-Jk-Xc8"/>
                                     <constraint firstAttribute="bottom" secondItem="Vca-51-Ogp" secondAttribute="bottom" constant="20.000000000000014" id="NPB-MR-eMF"/>
+                                    <constraint firstItem="1UF-pt-WAu" firstAttribute="leading" secondItem="moH-ve-np3" secondAttribute="trailing" constant="-3" id="PLY-vK-yCR"/>
+                                    <constraint firstAttribute="bottom" secondItem="1UF-pt-WAu" secondAttribute="bottom" constant="12" id="Pld-Es-ca7"/>
+                                    <constraint firstItem="1UF-pt-WAu" firstAttribute="top" secondItem="0eO-wQ-6fx" secondAttribute="bottom" constant="12" id="Ryp-Dc-46r"/>
                                     <constraint firstAttribute="trailing" secondItem="djt-58-Hxo" secondAttribute="trailing" constant="8" id="TTO-YL-JAx"/>
-                                    <constraint firstItem="gLy-u7-xbI" firstAttribute="leading" secondItem="moH-ve-np3" secondAttribute="trailing" constant="8" symbolic="YES" id="UQA-KV-xmH"/>
                                     <constraint firstItem="0eO-wQ-6fx" firstAttribute="leading" secondItem="F7S-op-5qg" secondAttribute="trailing" constant="8" symbolic="YES" id="crN-hP-k2E"/>
                                     <constraint firstItem="0eO-wQ-6fx" firstAttribute="top" secondItem="ejV-6Z-Jem" secondAttribute="bottom" constant="1" id="k8x-qQ-6ax"/>
                                     <constraint firstAttribute="bottom" secondItem="gLy-u7-xbI" secondAttribute="bottom" constant="9" id="pFW-mF-sX5"/>
@@ -289,8 +298,10 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="educationLbl" destination="0eO-wQ-6fx" id="A4k-Kt-3so"/>
+                <outlet property="firstTagView" destination="LSc-CU-Ipp" id="pvt-1F-ohL"/>
                 <outlet property="nameLbl" destination="ejV-6Z-Jem" id="2RH-hi-Wdq"/>
                 <outlet property="nonBlurView" destination="1RT-vZ-JaN" id="UCO-Ir-ph2"/>
+                <outlet property="noteIcon" destination="1UF-pt-WAu" id="1ZS-gH-uTq"/>
                 <outlet property="professionLbl" destination="gLy-u7-xbI" id="JOc-MD-kR4"/>
                 <outlet property="profilePicIV" destination="F7S-op-5qg" id="dzq-Qy-RZQ"/>
                 <outlet property="starBtn" destination="djt-58-Hxo" id="8FI-hV-0eC"/>
@@ -299,32 +310,34 @@
                 <outlet property="tagMoreLbl" destination="1rx-zU-ucu" id="Urw-OP-Fgp"/>
                 <outlet property="tagMoreView" destination="OHo-yC-iXl" id="pL1-0o-YZy"/>
                 <outlet property="tagsView" destination="moH-ve-np3" id="RFp-Pc-sLs"/>
+                <outlet property="tagsWidthConst" destination="F30-2u-ahN" id="2GU-zC-J8R"/>
             </connections>
             <point key="canvasLocation" x="90.839694656488547" y="-33.098591549295776"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="0eO-wQ-6fx">
-            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="122.66666666666667" height="12"/>
         </designable>
         <designable name="1rx-zU-ucu">
-            <size key="intrinsicContentSize" width="53.666666666666664" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="37.666666666666664" height="14.333333333333334"/>
         </designable>
         <designable name="F7S-op-5qg">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="Xr0-6b-sUq">
-            <size key="intrinsicContentSize" width="104" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="72.666666666666671" height="14.333333333333334"/>
         </designable>
         <designable name="ejV-6Z-Jem">
-            <size key="intrinsicContentSize" width="77.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="63" height="16.666666666666668"/>
         </designable>
         <designable name="gLy-u7-xbI">
-            <size key="intrinsicContentSize" width="139.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="115" height="16.666666666666668"/>
         </designable>
     </designables>
     <resources>
         <image name="girl" width="407" height="612"/>
+        <image name="note_icon" width="24" height="24"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <namedColor name="Base White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -339,7 +352,7 @@
             <color red="1" green="0.80800002813339233" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemGray2Color">
-            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
