--- a/Kismat App/MainViewController/Xibs/GeneralTextviewTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralTextviewTVCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,21 +12,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="GeneralTextviewTVCell" customModule="Kismmet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="135" id="KGk-i7-Jjw" customClass="GeneralTextviewTVCell" customModule="Kismmet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nZU-CV-UOM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="135"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BGx-be-Ie7" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
-                                <rect key="frame" x="11" y="10" width="353" height="102"/>
+                                <rect key="frame" x="11" y="10" width="353" height="113"/>
                                 <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Speech_bubble" translatesAutoresizingMaskIntoConstraints="NO" id="44a-cZ-EnJ">
+                                        <rect key="frame" x="-21" y="0.0" width="393" height="113"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="HDl-UB-qHf" customClass="FormTextView" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="4" y="9" width="345" height="85"/>
+                                        <rect key="frame" x="17" y="8" width="317" height="75"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -38,13 +42,16 @@
                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
                                                 <real key="value" value="16"/>
                                             </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textView>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Em8-mW-h9K" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="226" y="74" width="120" height="20"/>
+                                        <rect key="frame" x="226" y="96" width="120" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="OJe-VD-KIX"/>
-                                            <constraint firstAttribute="height" constant="20" id="iRB-9U-W29"/>
+                                            <constraint firstAttribute="height" constant="16" id="iRB-9U-W29"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -65,15 +72,19 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" name="Cell BG Base Grey"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="HDl-UB-qHf" firstAttribute="leading" secondItem="BGx-be-Ie7" secondAttribute="leading" constant="4" id="4J0-BE-8HE"/>
-                                    <constraint firstAttribute="height" constant="102" id="81R-lN-A0g"/>
-                                    <constraint firstAttribute="bottom" secondItem="Em8-mW-h9K" secondAttribute="bottom" constant="8" id="Iho-zR-kDe"/>
+                                    <constraint firstAttribute="bottom" secondItem="44a-cZ-EnJ" secondAttribute="bottom" id="0EG-v1-xCW"/>
+                                    <constraint firstItem="44a-cZ-EnJ" firstAttribute="leading" secondItem="BGx-be-Ie7" secondAttribute="leading" constant="-21" id="0Uo-bq-YjI"/>
+                                    <constraint firstItem="HDl-UB-qHf" firstAttribute="leading" secondItem="BGx-be-Ie7" secondAttribute="leading" constant="17" id="4J0-BE-8HE"/>
+                                    <constraint firstAttribute="height" constant="113" id="81R-lN-A0g"/>
+                                    <constraint firstAttribute="bottom" secondItem="Em8-mW-h9K" secondAttribute="bottom" constant="1" id="Iho-zR-kDe"/>
+                                    <constraint firstItem="44a-cZ-EnJ" firstAttribute="top" secondItem="BGx-be-Ie7" secondAttribute="top" id="NXE-sr-RVv"/>
+                                    <constraint firstAttribute="trailing" secondItem="44a-cZ-EnJ" secondAttribute="trailing" constant="-19" id="Tuf-tB-qPg"/>
                                     <constraint firstAttribute="trailing" secondItem="Em8-mW-h9K" secondAttribute="trailing" constant="7" id="d8Y-K0-rtu"/>
-                                    <constraint firstAttribute="trailing" secondItem="HDl-UB-qHf" secondAttribute="trailing" constant="4" id="n5s-ZV-ocd"/>
-                                    <constraint firstAttribute="bottom" secondItem="HDl-UB-qHf" secondAttribute="bottom" constant="8" id="s9Y-Qi-PMa"/>
-                                    <constraint firstItem="HDl-UB-qHf" firstAttribute="top" secondItem="BGx-be-Ie7" secondAttribute="top" constant="9" id="usu-ts-uW9"/>
+                                    <constraint firstAttribute="trailing" secondItem="HDl-UB-qHf" secondAttribute="trailing" constant="19" id="n5s-ZV-ocd"/>
+                                    <constraint firstAttribute="bottom" secondItem="HDl-UB-qHf" secondAttribute="bottom" constant="30" id="s9Y-Qi-PMa"/>
+                                    <constraint firstItem="HDl-UB-qHf" firstAttribute="top" secondItem="BGx-be-Ie7" secondAttribute="top" constant="8" id="usu-ts-uW9"/>
                                     <constraint firstAttribute="width" constant="353" id="yn9-Zk-YgG"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
@@ -97,8 +108,8 @@
                         </subviews>
                         <color key="backgroundColor" name="Base White"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="120" id="2tY-bS-KER"/>
-                            <constraint firstItem="BGx-be-Ie7" firstAttribute="centerY" secondItem="nZU-CV-UOM" secondAttribute="centerY" constant="1" id="dIp-m1-rDv"/>
+                            <constraint firstAttribute="height" constant="135" id="2tY-bS-KER"/>
+                            <constraint firstItem="BGx-be-Ie7" firstAttribute="centerY" secondItem="nZU-CV-UOM" secondAttribute="centerY" constant="-1" id="dIp-m1-rDv"/>
                             <constraint firstItem="BGx-be-Ie7" firstAttribute="centerX" secondItem="nZU-CV-UOM" secondAttribute="centerX" id="msS-9k-WQ7"/>
                         </constraints>
                     </view>
@@ -115,21 +126,19 @@
                 <outlet property="countLbl" destination="Em8-mW-h9K" id="FiA-Ft-H5G"/>
                 <outlet property="generalTV" destination="HDl-UB-qHf" id="Zbi-H9-ugD"/>
             </connections>
-            <point key="canvasLocation" x="52.671755725190835" y="105.63380281690141"/>
+            <point key="canvasLocation" x="52.671755725190835" y="110.91549295774648"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="Em8-mW-h9K"/>
     </designables>
     <resources>
+        <image name="Speech_bubble" width="331" height="112"/>
         <namedColor name="Base White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="Cell BG Base Grey">
-            <color red="0.20800000429153442" green="0.31000000238418579" blue="0.35699999332427979" alpha="0.10499999672174454" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Danger">
-            <color red="0.92500001192092896" green="0.30199998617172241" blue="0.30199998617172241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.92156862745098034" green="0.30196078431372547" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Text grey">
             <color red="0.20800000429153442" green="0.31000000238418579" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
